# akshare-rs

./: .gitmodules  Cargo.toml  README.md  flake.nix
crates/akshare/: Cargo.toml
crates/akshare-macros/: Cargo.toml
crates/akshare-macros/src/: lib.rs
crates/akshare/examples/: demo.rs
crates/akshare/src/: base.rs  lib.rs  ops.rs
crates/akshare/src/ops/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: dirs.rs  dump.rs  main.rs  parse.rs
