[package]
name = "akshare"
version = "0.1.0+1.16.20"
edition = "2021"

[dependencies]
akshare-macros = { path = "../akshare-macros" }
anyhow = "1.0.97"
arrow = { version = "54.2.1", features = ["prettyprint"] }
preinterpret = "0.2.0"
pyo3 = { version = "0.23.5", features = ["auto-initialize"] }
pyo3-arrow = "0.7.2"

